--- a/sati_django/apps/public/templates/event/event_detail.html
+++ b/sati_django/apps/public/templates/event/event_detail.html
@@ -36,7 +36,7 @@
 
             <hr/>
 
-            <md-content class="mdl-shadow--3dp mdl-grid" flex layout-padding>
+            <md-content class="mdl-shadow--4dp mdl-grid" flex layout-padding>
 
                 <div class="mdl-cell--12-col mdl-grid mdl-grid">
                     <div class="mdl-layout-spacer"></div>
@@ -54,7 +54,7 @@
 
                 <div class="mdl-grid mdl-cell--12-col session-detail">
                     <session-detail
-                            class="mdl-grid mdl-card mdl-cell mdl-cell--12-col mdl-shadow--2dpn"
+                            class="mdl-grid mdl-card mdl-cell mdl-cell--12-col mdl-shadow--4dp"
                             ng-repeat="session in eventDetail.event.sessions">
                     </session-detail>
 
