--- a/sati_django/src/static/templates/public/event/event_list.html
+++ b/sati_django/src/static/templates/public/event/event_list.html
@@ -15,15 +15,15 @@
 
     <md-input-container class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
         <label ng-bind="EventLabel.filter_label_event_begin_date()"></label>
-        <md-datepicker ng-model="filter.begin_date" md-open-on-focus></md-datepicker>
+        <md-datepicker ng-model="begin_date" md-open-on-focus></md-datepicker>
     </md-input-container>
 
     <md-input-container class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
         <label ng-bind="EventLabel.filter_label_event_category()"></label>
-        <md-select ng-model="search.category.id">
-            <md-option><em ng-bind="Label.none()"></em></md-option>
+        <md-select ng-model="search.category.name">
+            <md-option><em></em></md-option>
             <md-option ng-repeat="category in eventCtrl.categories"
-                       ng-value="category.id"
+                       ng-value="category.name"
                        ng-bind="category.name">
             </md-option>
         </md-select>
@@ -31,7 +31,7 @@
 
     <div class="mdl-layout-spacer"></div>
 
-    <div class="mdl-cell mdl-cell--2-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+    <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
         <md-button
                 ng-click="eventCtrl.clearFilter()"
                 class="md-raised md-primary mdl-cell--12-col"
@@ -42,7 +42,7 @@
 </div>
 
 <event-detail
-        ng-repeat="event in eventCtrl.filteredEvents = (eventCtrl.events | filter: search | event_begindate_filter: filter.begin_date) "
+        ng-repeat="event in eventCtrl.filteredEvents = (eventCtrl.events | filter: search | event_begin_date_filter: begin_date) "
         class="mdl-card mdl-card--event-detail
         mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone
         mdl-shadow--3dp">
