--- a/sati_django/apps/dashboard/templates/dashboard/base_crud.html
+++ b/sati_django/apps/dashboard/templates/dashboard/base_crud.html
@@ -10,8 +10,8 @@
 
         <div class="mdl-color--blue-grey ml-header relative clear">
             <div class="p-20">
-                <h3 class="mdl-color-text--white m-t-20 m-b-5 page-subtitle">Data tables</h3>
-                <h4 class="mdl-color-text--blue-grey-100 m-b-20 no-m-t w100 page-description">Work with large data sets in tables with NG-Table</h4>
+                <h3 class="mdl-color-text--white m-t-20 m-b-5 page-subtitle"></h3>
+                <h4 class="mdl-color-text--blue-grey-100 m-b-20 no-m-t w100 page-description"></h4>
             </div>
         </div>
 
