--- a/sati_django/apps/dashboard/templates/dashboard/participant.html
+++ b/sati_django/apps/dashboard/templates/dashboard/participant.html
@@ -18,14 +18,7 @@
     <div class="mdl-grid--no-spacing mdl-cell--12-col m-t-n60" ng-controller="ParticipantCtrl as participantCtrl">
 
 
-
-
-    <md-button aria-label="SignupLabel.label_load_information()"
-                       ng-click="participantCtrl.confirmParticipants($event)"
-                       class="md-raised md-primary mdl-cell mdl-cell--5-col mdl-cell--4-col-tablet mdl-cell--3-col-phone"
-                       ng-bind="Label.label_button_confirm_participation()">
-            </md-button>
-        <md-toolbar class="md-theme-light vert-align mdl-grid mdl-grid">
+        <md-toolbar class="md-theme-light vert-align mdl-grid">
             <div class="mdl-layout-spacer"></div>
             <div class="md-display-1 mdl-cell--12-col mdl-typography--text-center">
                 <span>Lista de Participantes</span>
@@ -35,10 +28,6 @@
 
         <md-content class="mdl-shadow--3dp mdl-grid" flex layout-padding>
 
-            <error-response messages="participantCtrl.errors" class="mdl-cell mdl-cell--12-col mdl-grid"></error-response>
-            <success-response messages="participantCtrl.success" class="mdl-cell mdl-cell--12-col mdl-grid"></success-response>
-
-
             <div class="mdl-cell mdl-cell--12-col mdl-grid checkboxdemoSyncing">
                 <div flex="100" layout="column">
                     <div class="standard">
@@ -47,7 +36,7 @@
 
                             <md-input-container class="mdl-cell mdl-cell--7-col">
                                 <label ng-bind="Label.filter_label_event_name()"></label>
-                                <input ng-model="event.name" ng-model-options="{ updateOn: 'blur' }"  id="filter_event" name="filter_event">
+                                <input ng-model="event.name" ng-model-options="{ debounce: 250 }"  id="filter_event" name="filter_event">
                             </md-input-container>
 
                             <md-input-container class="mdl-cell mdl-cell--4-col">
@@ -70,10 +59,7 @@
             </div>
 
 
-            <div class="mdl-grid mdl-cell--12-col">
-            </div>
-
-            <div class="mdl-grid mdl-shadow--6dp mdl-color-text--blue-grey-500" ng-repeat="event in participantCtrl.eventsFilter =  ( participantCtrl.events | filter : event) ">
+            <div class="mdl-cell--12-col mdl-grid mdl-shadow--4dp mdl-color-text--blue-grey-500" ng-repeat="event in participantCtrl.eventsFilter =  ( participantCtrl.events | filter : event) ">
 
                 <p ng-bind="event.has_participant"></p>
 
@@ -153,7 +139,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                <tr ng-repeat="participant in session.filterParticipant = (session.participants | filter : participant)" ng-init="log()">
+                                <tr ng-repeat="participant in session.filterParticipant = (session.participants | filter : participant)">
                                     <td class="mdl-data-table__cell--non-numeric" ng-bind="participant.name"></td>
                                     <td class="mdl-data-table__cell--non-numeric" ng-bind="participant.cpf | brCpf"></td>
                                     <td class="mdl-data-table__cell--non-numeric" ng-bind="participant.academic_registry"></td>
@@ -162,7 +148,7 @@
                                                    md-no-ink
                                                    aria-label="Label.label_participant_confirmed()"
                                                    ng-model="participant.is_confirmed"
-                                                   ng-change="participantCtrl.addModifiedParticipant(participant, event)">
+                                                   ng-change="participantCtrl.addModifiedParticipant(participant)">
                                             <label
                                                    ng-class="{'mdl-color-text--red-500': !participant.is_confirmed, 'mdl-color-text--green-500': participant.is_confirmed}"
                                                    ng-bind="participant.is_confirmed? Label.label_participant_is_confimed_true() : Label.label_participant_is_confimed_false() ">
